--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-.terrafor.lock.hcl
+.terraform.lock.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 #
