--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
 
    # Detect past or present hardcoded secrets like passwords, api keys, and tokens. NOTE: The current version of gitleaks has passwords detection disabled/not working
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.1.3
+    rev: v8.8.4
     hooks:
       - id: gitleaks
 
@@ -37,6 +37,7 @@ repos:
       - id: terraform_docs                                              ## Validate and build README's files
         args:
           - --hook-config=--path-to-file=README.md                      ## default path is . This specifies the path to the file, including the file name
+          - --hook-config=--recursive-path=./example
           # List below the README's of nested modules
           # - --hook-config=--path-to-file=./modules/nestedA/README.md
           # Include additional examples README's if applicable
