--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -31,5 +31,7 @@ jobs:
         terraform --version
     - uses: actions/setup-python@v2
     - run: pip install --upgrade pre-commit
-    - run: pre-commit run --all-files
+    - run: |
+        if pre-commit run --all-files; then
+        echo $?
     - run: git diff HEAD
