--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,11 +23,11 @@ jobs:
         mv tflint /home/runner/.local/bin/tflint
     - run: |
         curl -sSLo terraform_0.15.5_linux_amd64.zip https://releases.hashicorp.com/terraform/0.15.5/terraform_0.15.5_linux_amd64.zip
-        unzip terraform_0.13.7_linux_amd64.zip
+        unzip terraform_0.15.5_linux_amd64.zip
         # curl -sSLo terraform_0.15.5_linux_amd64.zip https://releases.hashicorp.com/terraform/0.13.7/terraform_0.13.7_linux_amd64.zip
         # unzip terraform_0.13.7_linux_amd64.zip
         chmod +x terraform
-        # mv terr/home/runner/.local/bin/terraform
+        mv terr/home/runner/.local/bin/terraform
         terraform-docs --version
         tflint --version
         terraform --version
