--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -27,10 +27,7 @@ jobs:
         # curl -sSLo terraform_0.15.5_linux_amd64.zip https://releases.hashicorp.com/terraform/0.13.7/terraform_0.13.7_linux_amd64.zip
         # unzip terraform_0.13.7_linux_amd64.zip
         chmod +x terraform
-        mv terr/home/runner/.local/bin/terraform
-        terraform-docs --version
-        tflint --version
-        terraform --version
+        mv terraform /home/runner/.local/bin/terraform
     - uses: actions/setup-python@v2
     - run: pip install --upgrade pre-commit
     - run: pre-commit run --all-files
