--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -2,8 +2,17 @@ name: pre-commit
 
 on:
   pull_request:
+    branches:
+      - main
+      - master
   push:
-    branches: [main]
+    branches:
+      - '!main'
+      - '!master'
+      - 'fixes/**'
+      - 'feature/**'
+      - 'hotfix/**'
+      - 'releases/**'
 
 env:
   TF_VER: "0.14.11"
@@ -43,7 +52,7 @@ jobs:
     - name: Enable python
       uses: actions/setup-python@v3
 
-    - name: Install pre-commit
+    - name: Install latest pre-commit
       run: pip install --upgrade pre-commit
 
     - name: Run pre-commit checks
